--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,5 +95,9 @@
     <string name="sex">性别</string>
     <string name="major">专业</string>
     <string name="start_date">入学日期</string>
+    <string name="school">school</string>
+    <string name="xueyuan">xueyuan</string>
+    <string name="size">size</string>
+    <string name="editor_label">编辑标签</string>
 
 </resources>
