--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,8 @@
     <string name="size">size</string>
     <string name="editor_label">编辑标签</string>
     <string name="title_activity_web_view">WebViewActivity</string>
+    <string name="uploading">正在上传</string>
+    <string name="allPicsReview">all_pics_review</string>
+    <string name="most_choose_nine_pics">最多选择9张图片</string>
 
 </resources>
