--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,8 @@
     <string name="uploading">正在上传</string>
     <string name="allPicsReview">all_pics_review</string>
     <string name="most_choose_nine_pics">最多选择9张图片</string>
+    <string name="reminder">提示</string>
+    <string name="are_you_sure_delete_this_pic">要删除这张照片吗</string>
+    <string name="sure">确定</string>
 
 </resources>
