--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,5 +158,8 @@
     <string name="publish_dynamic">发布动态</string>
     <string name="please_input_title">请输入标题</string>
     <string name="please_input_content">请输入内容</string>
+    <string name="delete">删除</string>
+    <string name="replay">回复</string>
+    <string name="close">关闭</string>
 
 </resources>
