--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,5 +161,6 @@
     <string name="delete">删除</string>
     <string name="replay">回复</string>
     <string name="close">关闭</string>
+    <string name="collect_with">收藏与</string>
 
 </resources>
