--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,5 +169,6 @@
     <string name="fail_info_tip">更新失败，请稍后再试</string>
     <string name="chooseType">选择类型</string>
     <string name="tuijian">推荐</string>
+    <string name="loading">正在加载中...</string>
 
 </resources>
