--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,5 +196,6 @@
     <string name="search">搜索</string>
     <string name="input_key_search">输入关键字进行搜索</string>
     <string name="changePhotoPage">更换相册封面</string>
+    <string name="share">分享</string>
 
 </resources>
