--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,5 +197,31 @@
     <string name="input_key_search">输入关键字进行搜索</string>
     <string name="changePhotoPage">更换相册封面</string>
     <string name="share">分享</string>
+    <string name="please_input_username">请输入用户名</string>
+    <string name="click_step_finish_register">点击完成注册</string>
+    <string name="register">注册</string>
+    <string name="alumni_register">校友圈注册</string>
+    <string name="please_input_password">请输入密码</string>
+    <string name="please_re_input_password">请再次输入密码</string>
+    <string name="filed_not_empty">字段不能为空</string>
+    <string name="twice_pass_diff">两次输入的密码不一致</string>
+    <string name="register_ok">注册成功</string>
+    <string name="choose_reason">选择原因</string>
+    <string name="complain_need_learn">投诉须知</string>
+    <string name="please_complain_reason">请选择投诉原因</string>
+    <string name="detail_info">详细信息</string>
+    <string name="complain">投诉</string>
+    <string name="commit">提交</string>
+    <string name="login">登录</string>
+    <string name="authorization">授权</string>
+    <string name="head">头像</string>
+    <string name="head_url">head_url</string>
+    <string name="replace_img">替换图片</string>
+    <string name="use">使用</string>
+    <string name="update_head">update_head</string>
+    <string name="update_bg">update_bg</string>
+    <string name="update_ok">更新成功</string>
+    <string name="login_error">登录失败</string>
+    <string name="logining">正在登录</string>
 
 </resources>
