--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,5 +238,8 @@
     <string name="file_save_to">文件保存到</string>
     <string name="complain_finish_wait_consume">投诉完成,等待处理</string>
     <string name="current_no_current">暂无任何评论</string>
+    <string name="delete_failure">删除失败</string>
+    <string name="delete_ok">删除成功</string>
+    <string name="collect_faiure">收藏失败</string>
 
 </resources>
