--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,5 +243,8 @@
     <string name="collect_faiure">收藏失败</string>
     <string name="you_have_collected">你已经收藏过</string>
     <string name="bg_url">bgUrl</string>
+    <string name="current_no_info">暂无任何信息</string>
+    <string name="question_solved">问题已被解决</string>
+    <string name="question_no_solved">问题没被解决</string>
 
 </resources>
